@@ -72,7 +72,8 @@ UNRELEASED
     * BREAKING CHANGE: client.sendQueriesBatch(cb, delay) => client.sendQueriesBatch(cb)
     * BREAKING CHANGE: index.addObject(content[, callback, objectID]) => index.addObject(content[, callback, objectID])
     * BREAKING CHANGE: index.getObject(objectID[, callback, attributes]) => index.getObject(objectID[, attrs, callback])
-
+    * BREAKING CHANGE: index.search(query, callback[, params, delay]) => index.search(query[, params callback]) or index.search(params[, cb]) with params = {query: 'some thing'}
+      We removed the delay option which should really be implemented by the module consumer. It's really a throttle/debounce of the search function.
 
 
 2015-02-03  2.9.2
